<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/group_main">
        <item
            android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/gray"
            />
        <item
            android:id="@+id/menu_fav"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favorite"
            android:iconTint="@color/gray"
            />
        <item
            android:id="@+id/menu_cart"
            android:title="@string/cart"
            android:icon="@drawable/ic_shopping_cart_24"
            android:iconTint="@color/gray"
            />
        <item
            android:id="@+id/menu_orders"
            android:title="@string/orders"
            android:icon="@drawable/ic_order_new"
            android:iconTint="@color/gray"
            />
        <item
            android:id="@+id/menu_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_user"
            android:iconTint="@color/gray"
            />
    </group>


        <group android:checkableBehavior="single" android:id="@+id/group_auth">
            <item
                android:id="@+id/menu_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout_new"
                android:iconTint="@color/gray"
                />
        </group>






</menu>